--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/geneFax.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.sqlite-jdbc-3.14.2.1.jar=/home/pete/NetBeansProjects/sqlite-jdbc-3.14.2.1.jar
+file.reference.sqlite-jdbc-3.14.2.1.jar=C:\\Users\\Chase\\Downloads\\sqlite-jdbc-3.14.2.1.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
