Updated UI Elements
Updated UI Elements so that they would make more logical sense. (My
previous naming convention was not good)

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,6 +4,7 @@ do.depend=false
 do.jar=true
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
+file.reference.sqlite-jdbc-3.14.2.1.jar=C:\\Users\\Aaron\\Downloads\\sqlite-jdbc-3.14.2.1.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Chase\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\Aaron\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
